--- a/docs/多线程.md
+++ b/docs/多线程.md
@@ -270,4 +270,10 @@ t4 竞争到了JUC锁 lock
 
 
 
-# 8. 
+# 8. 打断
+
+interrupt() 打断某个线程，给线程设置标志位false变成true，使用t.interrupt()
+
+isInterrupted() 查询某个线程是否被打断过，查询标志位，使用 t.isInterrupted()
+
+static interrupted() 查询当前线程是否被打断过，并重置打断标志位为false
